2015-06-01 Added enable, disable commands and isDisabled property in Image Gap and Image Source modules
2015-06-01 Fixed issue with check and reset in Basic Math Gaps module
2015-05-29 Fixed issue with blocking scoring after show answers and reset in Connection module
2015-05-28 Added new way to close full screen image in Zoom Image module
2015-05-28 Added commutativy property to Writing Calculations module
2015-05-28 Added commands show and hide to Shape module
2015-05-27 Fixed issue with input align in Writing Calculations module
2015-05-27 Fixed issue with draggable element in editor in Ordering module
2015-05-27 Fixed adding custom classes in editor in IWB Toolbar module
2015-05-27 Fixed issue with text parsing and state in Text Selection module
2015-05-25 Fixed counting errors in Count and Graph module
2015-05-25 Fixed issue with ShowAnswers in SourceList module
2015-05-25 Fixed issue with changing frames in Image Viewer module
2015-05-22 Fixed issue with reset in ImageSource and SourceList modules
2015-05-20 Added new property gap type and drag feature in "Basic Math Gaps" module
2015-05-20 Fixed issue with nextStep command in Slider module
2015-05-20 Added isDelayed property to eventBus addEventListener API
2015-05-20 Added getModulesScore() command to Limited Check module
2015-05-20 Fixed issue with dragging element to the same MultipleGap
2015-05-20 Fixed issue with Reset in Coloring module
2015-05-20 Fixed issue with dragging to filled gaps Text and ImageGap modules
2015-05-19 Fixed issue with fire PageLoaded events from previous pages
2015-05-19 Added handling HideAnswers event in Show Answers module
2015-05-19 Fixed handling HideAnswers events in Choice and True/False modules
2015-05-19 Added new modules - Limited Check and Limited Reset
2015-05-19 Fixed issue with slider on Desktop in Slider module
2015-05-18 Fixed reporting individual page score in JavaScript API
2015-05-18 Fixed issues with isAllOk in Shape Tracing module